--- a/src/web.public/public/scripts/appakin/pages/raters/raters.html
+++ b/src/web.public/public/scripts/appakin/pages/raters/raters.html
@@ -6,8 +6,9 @@
     <p>
         We&apos;ve got an exciting future planned for this Web site.
         There's a big idea and we&apos;re going to need people to help us.
-        You&apos;ll be able to earn at the same time as helping others to discover great apps.
-        <br/><br/>
+        You&apos;ll be able to earn while helping others to discover great apps.
+    </p>
+    <p>
         We&apos;re working right now on getting this all ready for you!
         Check back soon and keep an eye out for us.
     </p>
