--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -34,7 +34,7 @@
                         <div class="app-match" ng-if="!category.isCategoryMatch">
                             <ul class="category-apps">
                                 <li class="category-app"ng-repeat="app in category.apps | limitTo: 4">
-                                    <a class="img-wrapper" href="{{ url.createAppUrl(app.platform, app.url) }}" ><img ng-src="{{app.imageUrl}}" width="37px" height="37px"></a>
+                                    <a class="img-wrapper" href="{{ url.createAppUrl(app.platform, app.url) }}" ><img ng-src="{{app.imageUrl}}"></a>
                                     <h6><a class="underline-on-hover" href="{{ url.createAppUrl(app.platform, app.url) }}" ng-bind-html="app.name | trim: 30"></a></h4>
                                 </li>
                             </ul>
