--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -10,11 +10,17 @@
             </a>
             <div class="basic-info">
                 <p class="price highlighted">{{formatPrice(app.data.price)}}</p>
+                <!--<div class="rating sidebar-section" ng-if="app.data.userRatingCurrent && app.data.ratingCountCurrent >= 5">-->
+                    <!--<h6>CURRENT RATING</h6>-->
+                    <!--<div akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>-->
+                <!--</div>-->
                 <div class="rating sidebar-section" ng-if="app.data.userRatingCurrent">
                     <h6>CURRENT RATING</h6>
-                    <div akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>
+                    <div ng-if="app.data.ratingCountCurrent >= 5"
+                         akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>
+                    <p ng-if="app.data.ratingCountCurrent < 5">&nbsp;&mdash;</p>
                 </div>
-                <div class="rating sidebar-section" ng-if="app.data.userRating">
+                <div class="rating sidebar-section" ng-if="app.data.userRating && app.data.ratingCount >= 5">
                     <h6>OVERALL RATING</h6>
                     <div akin-score score="app.data.userRating" votes="formatVoteCount(app.data.ratingCount)"></div>
                 </div>
