--- a/src/web.public/public/scripts/appakin/pages/raters/raters.html
+++ b/src/web.public/public/scripts/appakin/pages/raters/raters.html
@@ -1,16 +1,18 @@
 <div id="raters" class="main-wrapper">
-    <h2>
-        Want to help us and earn?
-    </h2>
-    <img src="/images/about-to-come.svg">
-    <p>
-        We&apos;ve got an exciting future planned for this Web site.
-        There's a big idea and we&apos;re going to need people to help us.
-        You&apos;ll be able to earn while helping others to discover great apps.
-    </p>
-    <p>
-        We&apos;re working right now on getting this all ready for you!
-        Check back soon and keep an eye out for us.
-    </p>
+    <div class="about-section">
+        <h2>
+            Want to help us and earn?
+        </h2>
+        <img src="/images/about-to-come.svg">
+        <p>
+            We&apos;ve got an exciting future planned for this Web site.
+            There's a big idea and we&apos;re going to need people to help us.
+            You&apos;ll be able to earn while helping others to discover great apps.
+        </p>
+        <p>
+            We&apos;re working right now on getting this all ready for you!
+            Check back soon and keep an eye out for us.
+        </p>
+    </div>
 </div>
 <footer data-akin-footer></footer>
