--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -64,7 +64,7 @@
                          ng-if="app.data.screenShotUrls.length > 0">
                         <h2>SCREENSHOTS</h2>
                         <div class="screen-shot-wrapper img-border">
-                            <ul rn-carousel rn-carousel-buffered rn-carousel-control>
+                            <ul rn-carousel rn-carousel-buffered rn-carousel-indicator rn-carousel-control>
                                 <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
                                     <img ng-src="{{screenShotUrl}}" nopin="nopin">
                                 </li>
