--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -35,13 +35,19 @@
                                href="{{ url.createCategoryUrl(category.platform, category.url) }}"></a>
                         </h4>
                         <div class="category-match" ng-if="category.isCategoryMatch">
-                            <p class="description" ng-bind-html="category.highlight.desc[0] + ' &hellip;'"></p>
+                            <p class="description" ng-bind-html="'&hellip; ' + category.highlight.desc[0] + ' &hellip;'"></p>
                         </div>
-                        <div class="app-match" ng-if="!category.isCategoryMatch">
+                        <div class="app-match">
                             <ul class="category-apps">
                                 <li class="category-app"ng-repeat="app in category.apps | limitTo: 4">
-                                    <a class="img-wrapper" href="{{ url.createAppUrl(app.platform, app.url) }}" ><img ng-src="{{app.imageUrl}}"></a>
-                                    <h6><a class="underline-on-hover" href="{{ url.createAppUrl(app.platform, app.url) }}" ng-bind-html="app.name | trim: 30"></a></h4>
+                                    <a class="img-wrapper" href="{{ url.createAppUrl(app.platform, app.url) }}" >
+                                        <img ng-src="{{app.imageUrl}}">
+                                    </a>
+                                    <h6>
+                                        <a class="underline-on-hover" href="{{ url.createAppUrl(app.platform, app.url) }}"
+                                           ng-bind-html="app.highlight.name_split ? app.highlight.name_split : app.name"></a>
+                                    </h6>
+                                    <p class="tight-lines description" ng-bind-html="app.highlight.desc ? app.highlight.desc + ' &hellip;' : ''"></p>
                                 </li>
                             </ul>
                           </div>
@@ -56,9 +62,9 @@
                         <h4>
                             <a class="underline-on-hover"
                                href="{{ url.createAppUrl(app.platform, app.url) }}"
-                               ng-bind-html="app.name | firstSection: 55 | highlight: resultSearchTerm"></a>
+                               ng-bind-html="app.highlight.name_split ? app.highlight.name_split : app.name"></a>
                         </h4>
-                        <p class="tight-lines" ng-bind-html="app.highlight ? app.highlight + ' &hellip;' : ''"></p>
+                        <p class="tight-lines description" ng-bind-html="app.highlight.desc ? app.highlight.desc + ' &hellip;' : ''"></p>
                     </li>
                 </ul>
             </div>
