--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -21,9 +21,9 @@
                 <a href="{{url.createSearchUrl(suggestion, searchType, search.platform)}}">{{suggestion}}</a>?
             </span>
         </p>
-        <p class="hint" ng-if="isCategorySearch && hasResults">
-            Click on a category to see all of its apps.
-        </p>
+        <!--<p class="hint" ng-if="isCategorySearch && hasResults">-->
+            <!--Click on a category to see all of its apps.-->
+        <!--</p>-->
         <div class="valid-results-wrapper" ng-show="hasResults">
             <div class="list-wrapper" ng-class="search.searchInProgress ? 'disabled' : ''">
                 <ul ng-show="isCategorySearch">
