bugfix for remving keyboard on submitting search on mobile

--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -1,5 +1,5 @@
 <div>
-    <form ng-submit="search.submitSearch(1)" class="searchbox">
+    <form ng-submit="submitSearch(1)" class="searchbox">
         <div class="search-input">
             <search-input
                 ng-model="search.searchTerm"
