--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -50,7 +50,6 @@
             <p class="e-mail">
                 <a class="e-mail" href="mailto:hello@appakin.com">hello@appakin.com</a>
             </p>
-            <p class="telephone">+44 (0)7930 614 419</p>
             <ul class="social-media-links">
                 <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
                 <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
@@ -58,10 +57,13 @@
         </div>
         <div class="contact-details-section">
             <p class="address">
-                appAkin Ltd<br/>
+                APPAKIN LTD<br/>
+                MWB Business Exchange<br/>
+                Regal House<br/>
+                70 London Road<br/>
                 Twickenham<br/>
-                London<br/>
-                United Kingdon<br/>
+                TW1 3QS<br/>
+                United Kingdom<br/>
             </p>
         </div>
     </div>
