more button on category page

--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -55,7 +55,7 @@
                     </div>
                     <div ng-hide="display.fullDescription">
                         <p class="body-text" ng-bind-html="app.data.firstSection | formatDescription"></p>
-                        <a class="more never-underline" href ng-click="toggleFullDescription()"
+                        <a class="more-button never-underline" href ng-click="toggleFullDescription()"
                            ng-hide="app.data.firstSection === app.data.description"><span></span></a>
                     </div>
                 </div>
