--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -1,5 +1,6 @@
 <div id="home-page" ng-class="{ extended: autocompleteFocused }">
-    <img class="akin-logo" src="/images/appakin-logo-dark.svg">
+    <img class="akin-logo" alt="appAkin" src="/images/appakin-logo-dark.svg">
+    <!--<p class="subtitle">Search our categories for apps</p>-->
     <div class="platform-static">
         <div class="platform-img-wrapper android">
             <img class="platform-img" src="/images/google-play.svg">
