facebook and twitter urls updated

--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -51,8 +51,8 @@
                 <a class="e-mail" href="mailto:hello@appakin.com">hello@appakin.com</a>
             </p>
             <ul class="social-media-links">
-                <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
-                <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
+                <li><a href="https://www.facebook.com/pages/AppAkin/1468571630089537" class="facebook never-underline" target="_blank"></a></li>
+                <li><a href="https://twitter.com/appakin" class="twitter never-underline" target="_blank"></a></li>
             </ul>
         </div>
         <div class="contact-details-section">
