--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -1,7 +1,7 @@
 <div ng-if="locationData.onHomePage" class="home-header-wrapper">
     <ul class="social-media-links">
-        <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
-        <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
+        <li><a href="https://www.facebook.com/pages/AppAkin/1468571630089537" class="facebook never-underline" target="_blank"></a></li>
+        <li><a href="https://twitter.com/appakin" class="twitter never-underline" target="_blank"></a></li>
     </ul>
 </div>
 <div ng-if="!locationData.onHomePage" class="search-header-outer-wrapper">
