try at icon on category chart link on search page

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -66,7 +66,7 @@
                             <div class="more-wrapper">
                                 <a class="more underline-on-hover"
                                    href="{{ url.createCategoryUrl(category.platform, category.url) }}">
-                                    All {{category.name}} apps&hellip;
+                                    View {{category.name}} chart<span class="icon"></span>
                                 </a>
                             </div>
                         </div>
