--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -87,10 +87,10 @@
                 </div>
             </div>
             <div class="app-categories" ng-if="app.data.categories.length > 0">
-                <h2>RELATED CATEGORIES</h2>
+                <h2>CATEGORY CHARTS</h2>
                 <ul>
                     <li ng-repeat="category in app.data.categories">
-                        <h4><a class="body-link underline-on-hover" href="{{ url.createCategoryUrl(app.data.platform, category.url) }}">{{category.name}}</a></h4>
+                        <h4>#123 in <a class="body-link underline-on-hover" href="{{ url.createCategoryUrl(app.data.platform, category.url) }}">{{category.name}}</a></h4>
                     </li>
                 </ul>
             </div>
